--- a/intro.html
+++ b/intro.html
@@ -194,7 +194,7 @@
             </div>
             <div class="video-card">
                 <video src="video/books.mov" autoplay loop muted></video>
-                <a href="book.html" class="video-title">books & movies</a>
+                <a href="books.html" class="video-title">books & movies</a>
             </div>
             <div class="video-card">
                 <video src="video/projek.mp4" autoplay loop muted></video>
