--- a/intro.html
+++ b/intro.html
@@ -177,27 +177,27 @@
 
         <div class="video-grid">
             <div class="video-card">
-                <video src="video/elisya.mov" autoplay loop muted></video>
+                <video src="video/elisya.MOV" autoplay loop muted></video>
                 <a href="elisya.html" class="video-title">her</a>
             </div>
             <div class="video-card">
-                <video src="video/family.mov" autoplay loop muted></video>
+                <video src="video/family.MOV" autoplay loop muted></video>
                 <a href="family.html" class="video-title">beloved family</a>
             </div>
             <div class="video-card">
-                <video src="video/friends.mov" autoplay loop muted></video>
+                <video src="video/friends.MOV" autoplay loop muted></video>
                 <a href="friend.html" class="video-title">partner in crime</a>
             </div>
             <div class="video-card">
-                <video src="video/jpk.mov" autoplay loop muted></video>
+                <video src="video/jpk.MOV" autoplay loop muted></video>
                 <a href="jpk.html" class="video-title">my jpk</a>
             </div>
             <div class="video-card">
-                <video src="video/books.mov" autoplay loop muted></video>
+                <video src="video/books.MOV" autoplay loop muted></video>
                 <a href="books.html" class="video-title">books & movies</a>
             </div>
             <div class="video-card">
-                <video src="video/projek.mp4" autoplay loop muted></video>
+                <video src="video/projek.MP4" autoplay loop muted></video>
                 <a" class="video-title">sneak peak of my life :)</a>
             </div>
         </div>
