--- a/friend.html
+++ b/friend.html
@@ -134,7 +134,7 @@
         <h2>My Muder</h2>
         <div class="video-container">
             <video controls>
-                <source src="video/muder.mp4" type="video/mp4">
+                <source src="video/muder.MP4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -170,7 +170,7 @@
             <h2>My Best Teh Ais</h2>
             <div class="video-container">
                 <video controls>
-                    <source src="video/alis.mp4" type="video/mp4">
+                    <source src="video/alis.MP4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
